# meta-harness

./: .gitignore  AGENTS.md  CapabilityMatrix.record  README.md  WORKPLAN.md  pyproject.toml
.agents/: meta17-build-spec.md  meta17-definition.json  meta17-fix-brief-1.md  meta17-fix-brief-2.md  meta17-fix-brief-3.md  meta17-fix-brief-4.md  meta17-gate-brief-28c4b6b.md  meta17-gate-brief-4a8069b.md  meta17-gate-brief-5d2fb52.md  meta17-gate-brief-bd9b79d.md  (+30 more)
selflearn/: README.md  pyproject.toml
selflearn/distilled/software-engineering-is-not-about-writing-code/: analysis.json  analysis.md  chunks.jsonl  slides.html  slides.json  transcript.srt  transcript.txt  transcript.vtt
selflearn/examples/: offline_course_demo.py
selflearn/src/selflearn/: __init__.py  advisor.py  cli.py  contracts.py  doctor.py  evidence.py  graph.py  pipeline.py  ports.py  specialist.py  testing.py  wizard.py
selflearn/src/selflearn/acquisition/: __init__.py  backends.py  context.py  plugins.py  registry.py  reputability.py  ytdistill.py
selflearn/src/selflearn/compilation/: __init__.py  compiler.py  gate.py  models.py  registry.py  runtime.py  testgen.py
selflearn/src/selflearn/distillation/: __init__.py  distiller.py
selflearn/src/selflearn/learning/: __init__.py  gaps.py  improvement.py  marks.py  regression.py
selflearn/src/selflearn/retrieval/: __init__.py  injection.py  retriever.py
selflearn/src/selflearn/store/: __init__.py  packstore.py  seed.py
selflearn/src/selflearn/verification/: __init__.py  evalgen.py  suite.py  verifier.py
selflearn/tests/: test_acquisition.py  test_advisor.py  test_cli.py  test_compilation.py  test_compilation_gate.py  test_compilation_runtime.py  test_contracts.py  test_distillation.py  test_doctor.py  test_domain_readiness.py  test_evalgen.py  test_graph.py  test_learning.py  test_marks.py  test_pdf_plugin.py  test_pipeline.py  test_retrieval.py  test_review_fixes.py  test_search_backends.py  test_seed.py  test_specialist.py  test_store.py  test_verification.py  test_wizard.py
(+386 files in other folders)
