[project]
name = "metaharness"
version = "0.1.0"
description = "An intelligent meta agent harness that orchestrates, steers, and learns from other agent harnesses"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "fastapi",
    "uvicorn[standard]",
    "opentelemetry-sdk",
    "opentelemetry-api",
    "pydantic",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
e2e = ["playwright", "pytest-playwright"]
mcp = ["mcp>=1.2,<2"]

[project.scripts]
metaharness = "metaharness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
